# boofi-poc

./: .gitmodules  README.md  bun.lockb  package.json
.github/workflows/: production-dashboard.yml  production-email.yml  production-ui.yml  production-website.yml
apps/api/supabase/: config.toml
apps/dashboard/: package.json
apps/docs/: examples.mdx  integrations.mdx  introduction.mdx  local-development.mdx  mint.json  self-hosting.mdx
apps/engine/: wrangler.toml
apps/engine/src/: index.ts
apps/landing/: package.json
apps/landing/lib/: data.js
apps/relay-server/: index.js  package.json
apps/website/: README.md  jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/website/lib/: index.tsx
apps/website/pages/: index.js
apps/website/public/: sitemap-0.xml
apps/website/styles/: global.scss
boofi-lite/bots/: .gitignore  Cargo.toml  README.MD
boofi-lite/bots/config/: addresses.json  liquidation_parameters.json
boofi-lite/bots/src/: main.rs
boofi-lite/bots/src/utils/: liquidation.rs  mod.rs  monitor_positions.rs
boofi-lite/config-avax/: config.json  notes.md
boofi-lite/contracts/: .idea  .notes.md  contract-deployments.md  testenet-deployed.md
boofi-lite/feature-money-market/: .eslintrc.json  bun.lockb  components.json  index.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
boofi-lite/frontend/: .env.example  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
contracts/: .gitmodules
contracts/evm/: .gitignore  README.md  package.json
(+571 files in other folders)
