[package]
name = "flashloan_liquidation_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "1.0.2", features = ["abigen"] }
dotenv = "0.15"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
